--- a/tab.css
+++ b/tab.css
@@ -5,14 +5,21 @@
     display: flex;
 }
 .tab-nav-item {
+    margin-right: 2px;
     background: #ccc;
     color: #000;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px 5px 0 0;
 }
+.tab-nav-item.is-active {
+    background: #000;
+    color: #fff;
+}
 .tab-contents {
     border: 1px solid #ccc;
     padding: 20px;
 }
-.tab-contents-item {}
+.tab-contents-item {
+    display: none;
+}
