--- a/tab.css
+++ b/tab.css
@@ -10,6 +10,14 @@
     color: #000;
     padding: 10px 20px;
     text-decoration: none;
+    border-radius: 5px 5px 5px 5px;
+}
+.tab-nav-item.is-active {
+    margin-right: 2px;
+    background: #ccc;
+    color: #000;
+    padding: 10px 20px;
+    text-decoration: none;
     border-radius: 5px 5px 0 0;
 }
 .tab-nav-item.is-active {
